--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.6.5",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uploadthing": "^5.6.1",
     "zod": "^3.22.2"
   }
 }
